2002-06-29  Aldy Hernandez  <aldyh@quesejoda.com>
            Diego Novillo  <dnovillo@redhat.com>

        * c-simplify.c (simplify_call_expr): Do not bail on all builtins.
        (is_simple_call_expr): Same.
	(simplify_addr_expr): New function.
	(simplify_expr): Call it.

        * tree-simple.c (is_simplifiable_builtin): New.
        (is_simple_compound_lval): Do not bail on INDIRECT_REF.

        * tree-simple.h: New prototype for is_simplifiable_builtin.

2002-06-26  Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa.c (tree_build_ssa): Call free_dominance_info, not
	free, on idom.

	* tree-ssa-pre.c (compute_domchildren): Update to use new
	dominance_info structure, rather than idom array.
	(tree_perform_ssapre): Don't forget to free the dominance info.

	s/VARRAY_FREE/VARRAY_CLEAR/g now that VARRAY's are ggc allocated.

2002-06-24  Diego Novillo  <dnovillo@redhat.com>

	* tree-ssa.c (build_fud_chains): Use dominance_info instead of int *.
	(search_fud_chains): Ditto.
	Call get_immediate_dominator.
	* tree-ssa-pre.c (a_dom_b): Call dominated_by_p.
	(pre_idom): Change type to dominance_info.  Update all uses.
	(pre_doms): Remove.  Update all uses.

2002-06-23  Jan Hubicka  <jh@suse.cz>

	* reg-stack.c (convert_regs_exit): Push the registers to stack in
	proper order.

2002-06-22  Ulrich Weigand  <uweigand@de.ibm.com>

	PR middle-end/6963
	* function.c (assign_stack_temp_for_type): Do not return
	the same MEM rtx for multiple uses of a stack slot.

2002-06-22  David S. Miller  <davem@redhat.com>

	PR target/6841 target/6770 target/6719
	* config/sparc/sparc.h (PREFERRED_RELOAD_CLASS): Return
	NO_REGS	for constant X when CLASS is GENERAL_OR_FP_REGS or
	GENERAL_OR_EXTRA_FP_REGS.

2002-06-22  Neil Booth  <neil@daikokuya.co.uk>

	* cpptrad.c (struct fun_macro): Add line number.
	(scan_out_logical_line): Set it, and use it to report unterminated
	macro invocations.

2002-06-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
